# rustortion

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  bundler.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  lint.yaml  release.yml  translate.yml
benches/: chain.rs  engine.rs  impulse_responses.rs  samplers.rs
benches/common/: mod.rs
ir/Jesterdyne/: _readme_and_license.txt
presets/: Bitey.json  Clean.json  Clean_Eb.json  Clean_Overdrive.json  Controlled_Heavy.json  Crunch.json  Djent.json  Djent_Eb.json  Funky_Bass.json  High_Gain.json  Lead.json  Petrucci.json  Sabbath.json  clean.json  metal.json
rustortion-core/: Cargo.toml
rustortion-core/benches/: chain.rs  engine.rs  impulse_responses.rs  samplers.rs
rustortion-core/benches/common/: mod.rs
rustortion-core/src/: lib.rs
rustortion-core/src/amp/: chain.rs  mod.rs
rustortion-core/src/amp/stages/: clipper.rs  compressor.rs  delay.rs  eq.rs  filter.rs  level.rs  mod.rs  multiband_saturator.rs  nam.rs  noise_gate.rs  poweramp.rs  preamp.rs  reverb.rs  tonestack.rs  tremolo.rs
rustortion-core/src/audio/: engine.rs  mod.rs  peak_meter.rs  pitch_shifter.rs  recorder.rs  rt_drop.rs  samplers.rs
rustortion-core/src/ir/: cabinet.rs  load_service.rs  loader.rs  mod.rs
rustortion-core/src/ir/convolver/: fft.rs  fir.rs
rustortion-core/src/metronome/: mod.rs
rustortion-core/src/nam/: loader.rs  mod.rs  registry.rs
rustortion-core/src/preset/: manager.rs  mod.rs  stage_config.rs
rustortion-core/tests/: engine_factory.rs  no_alloc.rs
rustortion-core/tests/fixtures/: README.md
rustortion-gui/: Cargo.toml
rustortion-gui/src/: lib.rs
rustortion-gui/src/audio/: jack.rs  manager.rs  mod.rs  ports.rs
rustortion-gui/src/gui/: app.rs
rustortion-gui/src/hotkey/: mod.rs
rustortion-gui/src/settings/: mod.rs
rustortion-plugin/: Cargo.toml
rustortion-plugin/src/: backend.rs  editor.rs  factory.rs  ir_helper.rs  lib.rs  params.rs
rustortion-standalone/: Cargo.toml
rustortion-standalone/src/: backend.rs  lib.rs
rustortion-standalone/src/audio/: denormals.rs  jack.rs  manager.rs  mod.rs
rustortion-standalone/src/gui/: app.rs  mod.rs
rustortion-standalone/src/gui/components/dialogs/: midi.rs  settings.rs  tuner.rs
rustortion-standalone/src/gui/handlers/: midi.rs  settings.rs  tuner.rs
rustortion-standalone/src/midi/: mod.rs
rustortion-standalone/src/settings/: mod.rs
rustortion-standalone/tests/: engine.rs
rustortion-ui/: Cargo.toml
rustortion-ui/src/: app.rs  backend.rs  font.rs  lib.rs  tabs.rs
rustortion-ui/src/components/: ir_cabinet_control.rs  minimap.rs  mod.rs  peak_meter.rs  pitch_shift_control.rs  preset_bar.rs
rustortion-ui/src/handlers/: hotkey.rs  mod.rs  preset.rs
rustortion-ui/src/hotkey/: mod.rs
rustortion-ui/src/i18n/: mod.rs
rustortion-ui/src/messages/: hotkey.rs  mod.rs  settings.rs
rustortion-ui/src/stages/: compressor.rs  delay.rs  eq.rs  level.rs  mod.rs  multiband_saturator.rs  nam.rs  noise_gate.rs  poweramp.rs  preamp.rs  reverb.rs  tonestack.rs  tremolo.rs
src/: amp.rs  lib.rs  main.rs  processor.rs  recorder.rs
src/amp/: chain.rs
src/amp/stages/: clipper.rs  common.rs  compressor.rs  delay.rs  eq.rs  filter.rs  level.rs  mod.rs  multiband_saturator.rs  noise_gate.rs  poweramp.rs  preamp.rs  reverb.rs  tonestack.rs
src/audio/: engine.rs  jack.rs  manager.rs  mod.rs  peak_meter.rs  pitch_shifter.rs  ports.rs  processor.rs  recorder.rs  rt_drop.rs  samplers.rs
src/gui/: amp.rs  app.rs  messages.rs  mod.rs  preset.rs  settings.rs  tabs.rs
src/gui/components/: control.rs  input_filter_control.rs  ir_cabinet_control.rs  minimap.rs  mod.rs  peak_meter.rs  pitch_shift_control.rs  preset_bar.rs  settings_dialog.rs  stage_list.rs
src/gui/config/: cabinet.rs  compressor.rs  filter.rs  level.rs  mod.rs  (+5 more)
src/hotkey/: mod.rs
src/i18n/: mod.rs
src/io/: audio_ports.rs  manager.rs  mod.rs  processor.rs  recorder.rs
src/ir/: cabinet.rs  load_service.rs  loader.rs  mod.rs  model.rs
src/metronome/: mod.rs
src/midi/: manager.rs  mod.rs
src/plugin/: editor.rs  mod.rs  params.rs  simple_window.rs  threaded_editor.rs
src/preset/: manager.rs  mod.rs
src/settings/: mod.rs
src/sim/: amp.rs  chain.rs  impulse_response.rs  ir_cabinet.rs  mod.rs  tuner.rs
src/tuner/: mod.rs
tests/: engine.rs
xtask/: Cargo.toml
(+88 files in other folders)
