[package]
name = "rustortion"
version = "0.1.0"
edition = "2024"

[dependencies]
jack = "0.13"
hound = "3.5"
ctrlc = "3.4"
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "env"] }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
iced = "0.13"
log = "0.4"
