[package]
name = "rustortion"
version = "0.1.0"
edition = "2024"
default-run = "gui"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
jack = "0.13"
hound = "3.5"
ctrlc = { version = "3.4", features = ["termination"] }
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "env"] }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
iced = "0.13"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
