[package]
name = "rustortion"
version = "0.1.5"
edition = "2024"
default-run = "rustortion"
repository = "https://github.com/OpenSauce/rustortion"

[[bin]]
name = "rustortion"
path = "src/bin/gui.rs"

[dependencies]
jack = "0.13"
hound = "3.5"
ctrlc = { version = "3.5", features = ["termination"] }
chrono = "0.4"
clap = {version = "4.5", features = ["derive", "env"] }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
iced = { version = "0.13", features = ["tokio"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
rustfft = "6.4"
realfft = "3.5"
arc-swap = "1.8"

[dev-dependencies]
criterion = {version = "0.8", features = ["html_reports"] }
tempfile = "3.24"

[[bench]]
name = "impulse_responses"
harness = false

[[bench]]
name = "engine"
harness = false


[[bench]]
name = "chain"
harness = false

[[bench]]
name = "samplers"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
