[package]
name = "rustortion-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustortion-core = { path = "../rustortion-core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec" }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec", features = ["opengl"] }
log = "0.4"
dirs = "6"
