[package]
name = "rustortion-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustortion-core = { path = "../rustortion-core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec" }
rustortion-ui = { path = "../rustortion-ui" }
iced_baseview = { git = "https://github.com/OpenSauce/iced_baseview.git" }
crossbeam = "0.8"
log = "0.4"
dirs = "6"
