[package]
name = "rustortion-standalone"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/OpenSauce/rustortion"
default-run = "rustortion"

[lib]
name = "rustortion"
path = "src/lib.rs"

[[bin]]
name = "rustortion"
path = "src/bin/gui.rs"

[dependencies]
rustortion-core = { path = "../rustortion-core" }
rustortion-ui = { path = "../rustortion-ui" }
jack = "0.13"
hound = "3.5"
ctrlc = { version = "3.5", features = ["termination"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
iced = { version = "0.14", features = ["tokio"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
rustfft = "6.4"
realfft = "3.5"
arc-swap = "1.8"
midir = "0.11"

[dev-dependencies]
tempfile = "3.24"
